--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "dummy",
   "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "dev": "wrangler dev src/index.ts",
     "deploy": "wrangler deploy --minify src/index.ts",
     "db:generate": "drizzle-kit generate",
@@ -11,6 +13,7 @@
   "dependencies": {
     "@hono/zod-validator": "^0.4.1",
     "@libsql/client": "^0.14.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "bcrypt-ts": "^5.0.2",
     "drizzle-orm": "^0.35.3",
     "hono": "^4.6.6",
@@ -19,7 +22,29 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240925.0",
+    "@eslint/compat": "^1.2.1",
+    "@typescript-eslint/eslint-plugin": "7.0.0",
+    "@typescript-eslint/parser": "7.0.0",
     "drizzle-kit": "^0.26.2",
+    "eslint": "^9.13.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "wrangler": "^3.79.0"
+  },
+  "prettier": {
+    "importOrder": [
+      "^@?hono(/.*)?$",
+      "^@?drizzle-orm(/.*)?$",
+      "^[a-zA-Z]",
+      "^types/(.*)$",
+      "^[./]"
+    ],
+    "importOrderSeparation": true,
+    "importOrderSortSpecifiers": true,
+    "plugins": [
+      "@trivago/prettier-plugin-sort-imports"
+    ]
   }
 }
